<resources>
    <string name="app_name">XposedTelas</string>
    <string name="entrar">Entrar</string>
    <string name="ou">OU</string>
    <string name="criar_nova_conta">Criar nova conta</string>
    <string name="senha">Senha</string>
    <string name="xposed">XPOSED</string>
    <string name="email">Email</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Xposed">Xposed</string>
</resources>