<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCC143"
    android:backgroundTint="#29253C"
    android:foregroundTint="#673AB7"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="227dp"
        android:layout_height="60dp"
        android:layout_marginBottom="100dp"
        android:text="@string/criar_nova_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/ou"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/buttonLogar"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#66B8B6"
        android:text="@string/entrar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <View
        android:id="@+id/divider"
        android:layout_width="412dp"
        android:layout_height="2dp"
        android:layout_marginBottom="7dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogar"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="59dp"
        android:layout_height="45dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="49dp"
        android:text="@string/senha"
        android:textColor="#66B8B6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogar"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="6dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="47dp"
        android:layout_height="29dp"
        android:layout_marginBottom="3dp"
        android:text="@string/email"
        android:textColor="#66B8B6"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="73dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/chewy"
        android:text="@string/xposed"
        android:textColor="#AB4867"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>